fix layout issues on phones with smaller screen by decreasing padding, fixing texts

--- a/src/scss/hero-video-container.scss
+++ b/src/scss/hero-video-container.scss
@@ -56,7 +56,7 @@
   border-radius: 5px;
   box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.35);
   margin: auto;
-  max-width: 80%;
+  max-width: 90%;
   padding: 35px 0;
 
 
@@ -92,6 +92,10 @@
     font-size: 20px;
   } 
 
+}
+
+.consultation-container-bottom {
+  max-width: 100%;
 }
 
 .ui-timepicker-container {
