--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -75,17 +75,27 @@ ul.scroll-nav {
  *                    UI CONTAINER                      *
  ********************************************************/
 .neal-section {
-  padding: 10rem 25px;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  padding-right: 0px;
+  padding-left: 0px;
   text-align: center;
 }
 
 .neal-section.thinner {
-  padding: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .button-wrapper {
   text-align: center;
   min-height: 30px;
+}
+
+.container-fluid {
+  padding: 0px;
 }
 
 /********************************************************
